Adapt IoTDB support to 1.1.x
Use the Java 17 language level and the 1.1.x DatabaseManager contracts while preserving the IoTDB 2.0.11 behavior.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>